<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterBloodReceiver">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".DonorProfile">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorActionbarColor">

        <ImageView
            android:id="@+id/ivBack"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
            android:layout_width="27dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:scaleType="center"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/DR_TV_register_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_profile_register_heading"
            android:textColor="#000000"
            android:textSize="25sp"
            android:layout_centerInParent="true"
            android:scaleType="center"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RR_TV_national_id"
            android:layout_width="97dp"
            android:layout_height="30dp"
            android:text="@string/receiver_profile_national_id"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_weight="1"/>

        <EditText
            android:id="@+id/RR_ET_national_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/receiver_profile_ET_national_id"
            android:textColor="#777777"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RR_TV_name"
            android:layout_width="99dp"
            android:layout_height="36dp"
            android:text="@string/receiver_profile_name"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/RR_ET_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/receiver_profile_ET_name"
            android:textColor="#777777"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RR_TV_gender"
            android:layout_width="101dp"
            android:layout_height="26dp"
            android:text="@string/receiver_profile_gender"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_weight="1" />

        <RadioGroup
            android:layout_width="193dp"
            android:layout_height="33dp"
            android:orientation="horizontal"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" >


            <RadioButton
                android:id="@+id/RR_RB_male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Male" />

            <RadioButton
                android:id="@+id/RR_RB_female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Female" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RR_TV_blood_type"
            android:layout_width="125dp"
            android:layout_height="33dp"
            android:text="@string/receiver_profile_blood_type"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_weight="1" />

        <Spinner
            android:id="@+id/RR_spinner_blood_type"
            android:layout_width="192dp"
            android:layout_height="36dp"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RR_TV_dob"
            android:layout_width="141dp"
            android:layout_height="34dp"
            android:text="@string/receiver_profile_dob"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/RR_ET_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/receiver_profile_ET_dob"
            android:textColor="#777777"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RR_TV_email"
            android:layout_width="92dp"
            android:layout_height="26dp"
            android:text="@string/receiver_profile_email"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/RR_ET_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/receiver_profile_ET_email"
            android:textColor="#777777"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RR_TV_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_profile_phone_number"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/RR_ET_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/receiver_profile_ET_phone_number"
            android:textColor="#777777"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RR_TV_address"
            android:layout_width="88dp"
            android:layout_height="28dp"
            android:text="@string/receiver_profile_address"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/RR_ET_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/receiver_profile_ET_address"
            android:textColor="#777777"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RR_TV_city"
            android:layout_width="83dp"
            android:layout_height="29dp"
            android:text="@string/receiver_profile_city"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_weight="1" />

        <EditText
            android:id="@+id/RR_ET_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/receiver_profile_ET_city"
            android:textColor="#777777"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <Button
            android:id="@+id/RR_B_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/receiver_profile_register_button"
             />
    </LinearLayout>
    </LinearLayout>
    </LinearLayout>

</ScrollView>