<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserLogin"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="20dp"
        android:weightSum="2">


        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:srcCompat="@drawable/blood" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp">

        <TextView
            android:id="@+id/UL_TV_username"
            android:layout_width="110dp"
            android:layout_height="42dp"
            android:text="@string/user_login_username"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="344dp" />

        <EditText
            android:id="@+id/UL_ET_username"
            android:layout_width="285dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/user_login_ET_username"
            android:textColor="#777777"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="333dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
       >

        <TextView
            android:id="@+id/UL_TV_password"
            android:layout_width="110dp"
            android:layout_height="29dp"
            android:text="@string/user_login_password"
            android:textColor="#000000"
            android:textSize="20sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="414dp" />

        <EditText
            android:id="@+id/UL_ET_password"
            android:layout_width="293dp"
            android:layout_height="match_parent"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/user_login_ET_password"
            android:textColor="#777777"
            android:textSize="18sp"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="405dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/UL_B_login"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:text="@string/user_login_button"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="150dp"
            tools:layout_editor_absoluteY="516dp" />

        <Button
            android:id="@+id/UL_B_Register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/user_register_button" />

    </LinearLayout>

</LinearLayout>