<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".ReceiverProfile">

    <RelativeLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/colorActionbarColor">

        <ImageView
            android:id="@+id/ivBack"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Menu"
            android:layout_width="27dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:scaleType="center"
            android:visibility="visible"
            app:srcCompat="@drawable/ic_back_arrow" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:scaleType="center"
            android:text="@string/RegisterHeading"
            android:textColor="#000000"
            android:textSize="16dp" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="20dp"
            android:weightSum="2">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/RP_B_request_blood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/receiver_profile_request_blood_button" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RP_TV_national_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_profile_national_id"
            android:textColor="#000000"
            android:textSize="20sp"
             />

        <TextView
            android:id="@+id/RP_TV_show_national_id"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="TV NATIONAL ID"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RP_TV_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_profile_name"
            android:textColor="#000000"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/RP_TV_show_name"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="TV NAME"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RP_TV_blood_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_profile_blood_type"
            android:textColor="#000000"
            android:textSize="20sp"
             />

        <TextView
            android:id="@+id/RP_TV_show_blood_type"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="TV BLOOD TYPE"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RP_TV_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_profile_gender"
            android:textColor="#000000"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/RP_TV_show_gender"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="TV GENDER"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RP_TV_dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_profile_dob"
            android:textColor="#000000"
            android:textSize="20sp"
             />

        <TextView
            android:id="@+id/RP_TV_show_dob"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="TV DOB"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RP_TV_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_profile_phone_number"
            android:textColor="#000000"
            android:textSize="20sp"
             />

        <TextView
            android:id="@+id/RP_TV_show_phone"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="TV PHONE"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RP_TV_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_profile_email"
            android:textColor="#000000"
            android:textSize="20sp"
             />

        <TextView
            android:id="@+id/RP_TV_show_email"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="TV EMAIL"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RP_TV_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_profile_address"
            android:textColor="#000000"
            android:textSize="20sp"
             />

        <TextView
            android:id="@+id/RP_TV_show_address"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="TV ADDRESS"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginBottom="20dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/RP_TV_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_profile_city"
            android:textColor="#000000"
            android:textSize="20sp"
             />

        <TextView
            android:id="@+id/RP_TV_show_city"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="TV CITY"
            android:textColor="#000000"
            android:textSize="20sp"
            android:layout_marginLeft="15dp"
            android:layout_weight="2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="20dp"
        android:weightSum="4">

        <Button
            android:id="@+id/RP_B_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_profile_update_button"
            android:layout_weight="2"/>

        <Button
            android:id="@+id/RP_B_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receiver_profile_delete_button"
            android:layout_weight="2" />

    </LinearLayout>
    </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>